--- a/src/style/search-trending.css
+++ b/src/style/search-trending.css
@@ -1,10 +1,11 @@
 .small-block{
-    /* background-color: rgb(170, 165, 165); */
+    /* background-image: linear-gradient(to right, #fc5c7d, #6a82fb); */
     padding: 3px;
     border-top-left-radius: 1cap;
     height: 150px;
     position: relative;
-    border-left: 1px solid #ffec00;
+    display: flex;
+    justify-content: space-around;
 }
 .sub_div {
     position: absolute;
@@ -20,3 +21,9 @@
 .zoom:hover {
 transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
+
+
+.icon-placeholder {
+    border-radius: 50%;
+    margin-right: 20px;
+  }
