--- a/src/style/header.css
+++ b/src/style/header.css
@@ -14,7 +14,7 @@ header {
   }
   
   .site-logo {
-    margin-left: 200px;
+    margin-left: 10%;
     margin-top: -5px;
     font-weight: 1000;
   }
